# speedtrials-2025

./: Makefile  docker-compose.yaml  requirements.md
app/: Makefile  pyproject.toml
app/src/agents/: draft.py  graph.py
app/src/app/: main.py
app/src/app/pages/: 0_Chat.py  1_Data_Overview.py  2_Public_View.py  3_Operator_View.py  4_Regulator_View.py
app/src/data/: data.py
app/src/models/: models.py
app/src/postgres/: postgres.py
